Release history for Comment-Spell

{{$NEXT}}

0.001001 2014-09-28T04:36:41Z
 [Bugfix]
 - Require newer version of Pod::Wordlist

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - runtime: ↑1

0.001000 2014-09-26T02:46:34Z
 - First version.
