@@ -1,2 +1,3 @@
-.build
-Comment-Spell-*
+/.build
+/Comment-Spell-*
+/tmp/
