@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.020003 at Fri Sep 26 11:27:16 2014
+; vim: syntax=dosini
 name             = Comment-Spell
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
