@@ -1,6 +1,14 @@
 Release history for Comment-Spell
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001001, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +13 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +2)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 0.001001 2014-09-28T04:36:41Z
  [Bugfix]
@@ -12,4 +20,3 @@ Release history for Comment-Spell
 
 0.001000 2014-09-26T02:46:34Z
  - First version.
-
